# Resume-ATS-Score-Checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yml  main.yml
data/: 08_10_2025_08_21_59.json  13_09_2025_15_24_48.json
notebook/: data_ingestion.ipynb  data_transfomation.ipynb  job_description.ipynb  scorings.ipynb  test.json  test.py  trail.ipynb
resumes/: 1.docx  1.html  2.docx  2.html  3.docx  3.html  3_images.docx  3_js_heavy.html
secrets.example/: .env.example
src/ats/: __init__.py  exception.py
src/ats/cloud/: __init__.py
src/ats/components/: __init__.py  cloud_push.py  data_ingestion.py  data_transformation.py  job_description.py  scoring.py
src/ats/components/parsers/: __init__.py  base.py  docx.py  html.py  job_description.py  pdf.py
src/ats/components/schema/: __init__.py  file.py  job_description.py  resume.py
src/ats/components/scorers/: __init__.py  minilm.py  mpnet.py  roberta.py
src/ats/config/: __init__.py
src/ats/config/builder/: __init__.py
src/ats/config/raw/: config.yaml
src/ats/constants/: __init__.py  schema.py  values.py
src/ats/entity/: __init__.py
src/ats/exception/: __init__.py
src/ats/logger/: __init__.py
src/ats/pipeline/: __init__.py
src/ats/utils/: __init__.py
